Creacion del test para el endpoint y hecha la integracion correcta del endpoint, tambien ajustando el archivo swagger de la documentacion del endpoint
