# src/controllers/auth.controller.js
@@ -1,4 +1,4 @@
-import { registerNewUser } from '../services/auth.service.js'
+import { loginUser, registerNewUser } from '../services/auth.service.js'
 
 export async function registerController(req, res, next) {
   try {
@@ -8,6 +8,21 @@ export async function registerController(req, res, next) {
       success: true,
       message: 'Usuario creado correctamente!',
       user,
+    })
+  } catch (err) {
+    next(err)
+  }
+}
+
+export async function loginController(req, res, next) {
+  try {
+    const user = await loginUser(req.body)
+
+    res.status(200).json({
+      success: true,
+      message: 'Inicio de sesión exitoso',
+      accessToken: user.accessToken,
+      refreshToken: user.refreshToken,
     })
   } catch (err) {
     next(err)
