# src/rutes/auth.routes.js
@@ -1,8 +1,11 @@
 import { Router } from 'express'
-import { registerController } from '../controllers/auth.controller.js'
+import {
+  loginController,
+  registerController,
+} from '../controllers/auth.controller.js'
 import { credentials } from '../validators/credentialsAuth.js'
 import { validateFields } from '../middlewares/validateFields.js'
-import { registerRateLimit } from '../middlewares/rate.js'
+import { loginRateLimit, registerRateLimit } from '../middlewares/rate.js'
 
 const router = Router()
 
@@ -12,6 +15,14 @@ router.post(
   credentials,
   validateFields,
   registerController
+)
+
+router.post(
+  '/login',
+  loginRateLimit,
+  credentials,
+  validateFields,
+  loginController
 )
 
 export default router
